# Project_rtk

./: .gitignore  Links.py  README.md  conftest.py  constants.py  pyproject.toml  pytest.ini
locators/: form_auth_locators.py
pages/: auth_page.py  base_page.py
tests/: test_auth.py
